--- a/content/viewsPart2.tex
+++ b/content/viewsPart2.tex
@@ -2,32 +2,60 @@
 
 \subsection{Challenges Encountered}
 
-    In the current state of addressing transportation challenges for individuals with Autism Spectrum Disorder (ASD), a nuanced understanding of their predicaments reveals a complex interplay of obstacles. At the forefront is the critical issue of limited accessibility to public transportation, particularly evident in suburban and rural areas. To propel this facet into the realm of advanced problem-solving, cutting-edge spatial planning and infrastructural designs are essential. The state-of-the-art solution involves a strategic reevaluation of the spatial distribution of essential facilities, leveraging the latest advancements in urban planning and inclusive design principles to diminish accessibility disparities.
-
-    The heavy reliance on parents and caregivers for transportation emerges as a formidable challenge, demanding innovative solutions rooted in the latest sociological and psychological insights. Pioneering initiatives must address the emotional and logistical burdens faced by caregivers, seeking to promote independence for individuals with ASD. This involves delving into state-of-the-art support structures, potentially integrating virtual or community-based platforms that provide real-time assistance and foster a more self-reliant transportation approach.
+    Transportation poses a profound array of challenges for individuals with Autism Spectrum Disorder (ASD), as illuminated by in-depth research studies. 
     
-    Navigating the transitional period after school poses a unique set of problems, necessitating cutting-edge strategies to ensure a smooth journey into adulthood for individuals with ASD. The integration of technology-driven travel education, orientation, and training into Individualized Education Programs (IEPs) represents a state-of-the-art solution. By adopting immersive and interactive technologies, individuals with ASD can be better equipped to overcome the challenges associated with this critical life juncture.
+    Among the myriad difficulties faced by this population, anxiety and stress loom large in the daily experiences of young adults with ASD. This pervasive anxiety is rooted in the constant fear of making errors during travel, missing crucial stops, and navigating the uncertainty of potential modifications to their transportation routines. This heightened emotional state adds layers of complexity to what is already a routine activity for many. 
     
-    Safety concerns related to driving and crowding present additional hurdles that require forward-thinking approaches. State-of-the-art interventions encompass targeted education programs for transportation staff, leveraging advancements in training methodologies. Collaborations with transportation providers, including the exploration of innovative service expansions and technology-driven safety enhancements, epitomize the proactive stance needed to address these challenges.
+    Sensory challenges emerge as another barrier, encapsulating issues such as balance and motion sickness, sensitivity to environmental noise, tactile sensations, lights, and smells encountered during public transport journeys. These sensory intricacies further intensify the challenges faced by individuals with ASD, making routine travel a daunting prospect. 
     
-    In essence, the current state of addressing transportation challenges for individuals with ASD calls for cutting-edge solutions that transcend traditional boundaries. By combining advanced technological tools, interdisciplinary research, and an innovative societal approach, we can pave the way for a transportation landscape that is not just aware of the challenges but actively shapes its contours to meet the unique needs of individuals with Autism Spectrum Disorder.
+    A significant concern arises from the heavy dependency on parents and caregivers for transportation, creating a dynamic that introduces inconveniences and stress for both adults with ASD and their immediate support circles. This dependence not only impacts their autonomy but also has wider implications for the flexibility and convenience of their daily lives. 
+    
+    The transition period after the conclusion of school, typically around age 21, unveils another layer of challenges, as government support and school transportation cease, thrusting individuals with ASD and their families into a realm of newfound transportation complexities. 
+    
+    Limited walking skills among many adults with ASD further contribute to their reliance on others for transportation, impeding their capacity to navigate public spaces independently. 
+    
+    Safety concerns associated with driving, despite an expressed interest in obtaining a driver's license for the sake of independence, pose significant obstacles, particularly from the perspective of concerned parents. 
+    
+    Societal awareness and integration represent overarching issues, underscoring the need for a broader educational campaign aimed at fostering understanding and inclusion. 
+    
+    Moreover, specific concerns about crowding and safety emerge as tangible barriers to public transport for individuals with ASD, while neurotypical adults grapple with obstacles related to service location and timing. 
+    
+    These multifaceted challenges underscore the urgency for targeted interventions and comprehensive strategies to enhance the transportation experiences of individuals with ASD, ultimately fostering greater independence, accessibility, and inclusion within the broader community.
 
 \subsection{Current Adaptations}
 
-   Individuals with Autism Spectrum Disorder (ASD) exhibit remarkable adaptability in facing the challenges posed by transportation issues, as highlighted in the research presented in Texts 1 and 2. In response to limited accessibility of public transportation, adults with ASD often develop unique coping strategies. Some may rely on fixed routines and schedules to navigate public transit efficiently, while others explore alternative modes of transportation, such as walking or cycling, when feasible. The heavy dependence on parents and caregivers prompts individuals with ASD to cultivate effective communication and planning skills to coordinate transportation arrangements. Additionally, during the challenging transition period after school, many adults with ASD engage in self-advocacy efforts, seeking support networks and resources to enhance their independent travel skills.
-
-    Moreover, the viewpoint study from Australia in Text 2 suggests that individuals with ASD often prefer public transport over driving, showcasing an adaptive response to challenges in obtaining a driver's license. The inclination towards electronic ticketing systems indicates a willingness to embrace technological solutions for smoother travel experiences. In the face of safety concerns related to crowding, individuals with ASD may develop strategies such as traveling during off-peak hours or selecting less crowded transport options.
-    
-    These adaptations underscore the resilience and resourcefulness of individuals with ASD in navigating the intricacies of public transportation. While challenges persist, the ability to develop personalized strategies and leverage available resources showcases the capacity of individuals with ASD to actively engage with their transportation needs. Recognizing and supporting these adaptive mechanisms can inform future interventions and policies aimed at fostering a more inclusive and accommodating transportation landscape for individuals with ASD.
+   To mitigate those challenges, individuals with Autism Spectrum Disorder (ASD) employ a range of adaptive strategies to navigate within public transports. 
+   
+   Leveraging their support circles, including family members and caregivers, proves instrumental in mitigating the stress and anxiety often linked to travel. 
+   
+   Technological tools, such as smartphones and applications, play a crucial role in aiding individuals with ASD in planning routes, checking transportation schedules, and enhancing their independence during travel. 
+   
+   Planning ahead becomes a cornerstone strategy, allowing these individuals to anticipate potential modifications and familiarize themselves with routes, instilling a sense of control.
+   
+   Managing sensory challenges involves the use of music or headphones to create a controlled auditory environment, providing relief from noise sensitivity. 
+   
+   Some individuals find comfort in utilizing bicycles for short-distance travel, fostering a sense of autonomy. The inclination towards self-reliance is evident, as participants express a preference for drawing on personal coping mechanisms rather than seeking external help. Establishing routines and adhering to predictability emerge as effective coping mechanisms, reducing anxiety by introducing familiarity into their travel experiences. 
+   
+   Avoiding crowded spaces, choosing off-peak hours, and developing heightened spatial awareness are additional strategies aimed at minimizing stress during public transport journeys. 
+   
+   Overall, these adaptive strategies underscore the resilience and resourcefulness of individuals with ASD as they navigate the complexities of public transportation.
 
 \subsection{Expectations and Envisaged Solutions}
 
-    In the cutting-edge realm of addressing transportation challenges faced by individuals with Autism Spectrum Disorder (ASD), pioneering solutions and expectations are reshaping the landscape. At the forefront is the envisioned establishment of a New Jersey Autism and Developmental Disabilities Transportation Research Center—a state-of-the-art interdisciplinary hub. This center, as recommended in Text 1, is poised to spearhead innovative strategies that transcend regional boundaries, providing a nationwide information clearinghouse for revolutionary transportation solutions. Expectations center around harnessing the latest advancements in spatial planning, inclusive infrastructure design, and the integration of Intelligent Transportation Systems (ITS) to enhance accessibility for individuals with ASD.
-
-    Integral to this paradigm shift is the incorporation of cutting-edge technology. Collaborative efforts with ITS experts hold the promise of evaluating and implementing smart solutions, leveraging tools such as smart phones, applications, and vehicle-to-infrastructure systems. This visionary approach aligns with the desire for greater independence, offering individuals with ASD advanced means to navigate the transportation landscape.
+    Individuals with Autism Spectrum Disorder (ASD) advocate for a comprehensive set of expectations and corresponding solutions to confront the challenges entwined with transportation. 
     
-    Education and training are poised to undergo a transformation, guided by a state-of-the-art vision. The integration of comprehensive transportation-focused training programs, including pedestrian skills and driver education, directly into Individualized Education Programs (IEPs) signifies a forward-thinking strategy. By adopting a proactive stance on travel education, individuals with ASD and their families envision a future where the challenges of the critical transition period after school are met with preparedness and resilience.
+    At the forefront of their aspirations is the collective desire for a reduction in anxiety and stress during travel, underscoring the urgent need for the implementation of sensory-friendly measures. This includes quieter travel options, dedicated spaces tailored to sensory sensitivities, and clear communication practices to mitigate uncertainty. 
     
-    In the realm of societal awareness, a cutting-edge approach involves collaboration with the New Jersey autism stakeholder community to craft targeted outreach initiatives. Conferences, presentations, and educational seminars, combined with annual statewide conferences on transportation options, are anticipated to create a dynamic and informed public discourse. This state-of-the-art awareness campaign seeks to dispel misconceptions and foster an inclusive environment for individuals with ASD as they engage with public transportation.
+    The quest for increased independence resonates as a common goal, prompting a call for the development of cutting-edge technologies, user-friendly apps, and robust training programs. These initiatives aim to empower individuals with ASD to navigate public spaces autonomously. 
     
-    As we stand at the forefront of transportation innovation, the synthesis of technological prowess, interdisciplinary research, and a societal paradigm shift is poised to revolutionize the journey for individuals with ASD. The state-of-the-art initiatives outlined underscore a commitment to inclusivity, independence, and a future where transportation solutions are not just accessible but tailored to the unique needs of this community.
+    The overarching expectation of improved accessibility fuels a demand for the incorporation of universal design principles into transportation infrastructure, ensuring facilities and services cater to diverse abilities. 
+    
+    The prospect of a smooth transition after school elicits a call for integrated travel education within school curricula, specifically embedded in Individualized Education Programs. 
+    
+    Addressing the burgeoning interest in driving involves tailoring driver education programs to assuage safety concerns and foster autonomy. 
+    
+    Societal expectations revolve around heightened awareness, calling for collaborative awareness campaigns designed to educate the general public on the unique needs of individuals with ASD. Collaboration and integration take center stage, advocating for the establishment of protocols that foster sustainable transportation infrastructure in partnership with Non-Governmental Organizations and dedicated researchers. 
+    
+    The expectation of adopting best practices underscores a global perspective, urging the initiation of global studies to identify and replicate successful strategies. Specialized training for transportation staff becomes a focal point, emphasizing collaboration with the ASD stakeholder community to craft effective training modules. 
+    
+    The desire for service expansion, coupled with the creation of a dedicated statewide mobility manager, signifies a collective plea for comprehensive, inclusive, and tailored strategies to address the intricate and diverse needs of individuals with ASD in the realm of transportation.
