Ajout de ma partie pas encore relue, avec l'utilisation d'une liste je sais pas si j'ai le droit

--- a/content/3.part.tex
+++ b/content/3.part.tex
@@ -1,29 +1,33 @@
-\section{Part 3}
+\section{The different design's solution to answer at this problems}
+The problematic to simplify the transport in the city for the people with ASD is increasingly considered. The different solutions that has been suggested can be separate in three part. One is on guiding person to different location, others are on modifying the city, or the comportment of person with ASD. This different approach give very various solutions, which can be implemented separately. We will here discuss about different proposition of solution that have been submitted. We will aboard the solutions by subsection, according to their type.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel nunc ultricies, lobortis leo a, mattis sapien. Duis nec sapien a diam sollicitudin consectetur. Etiam magna lorem, vulputate at fermentum sed, hendrerit nec metus. Integer ut nunc elit. Cras tristique finibus porttitor. Aliquam fringilla ipsum eget condimentum vehicula. Sed ac tellus ac erat sagittis ullamcorper quis a leo. Nulla sed elit tincidunt, posuere velit sed, fringilla quam. Praesent facilisis eros nec leo luctus, in mattis quam rhoncus.
+\subsection{Solutions based on guiding people with ASD disorders}
+Like it has been discuss in the article (1),(3) and (2) !!!!!!, this solution have for purpose to propose a route to go from a point A to a point B. This solutions need to be use in to much different situation, it why they can't just be available. In fact, this solution need to be summon by the people with ASD, to submit them a trajectory which can be follow or not. Contrary to the other solution that we will see later.
 
-Phasellus lorem erat, aliquet at dapibus in, egestas at justo. Cras a lectus eget libero faucibus cursus. Nulla et facilisis dui. In orci odio, faucibus a ultricies eu, finibus ut massa. Praesent ac sem volutpat, tempor risus quis, aliquet turpis. In hac habitasse platea dictumst. Vestibulum laoreet, justo id semper eleifend, augue dui molestie ligula, id varius erat mi a quam. Etiam cursus, justo ac lobortis viverra, nibh neque faucibus nibh, ut laoreet nulla ligula quis neque. Nam ornare felis nisi, sit amet vulputate lorem varius at. Vestibulum tincidunt, ex eget finibus pulvinar, magna sapien convallis ante, quis mollis nisl ex ac mi. Etiam vestibulum dui a lorem vulputate, et cursus mauris dictum. Donec porta molestie tincidunt. Proin euismod libero turpis, sed iaculis magna posuere nec. Ut non dolor nisl. Donec a tellus pulvinar, luctus dolor vel, ultrices sem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+The solution developed in the articles (1) and (2) !!!!!!, is about to guide people with ASD into transportation hub, and building. The solution will be implemented by an application on the phone of the user which will submit them a route with less people, noise and other criteria. The idea is to localise the people with ASD in the area and to guide them with giving information on their phones. To localise the person the articles develop two techniques. The first one is  3D semantic model of the facility and combines it with 2D-3D registrations of smart phones images from various users to offer a 3D localisation of the user. The second is to use sensor to localise a beacon which can be generate by the phone of the people with ASD. Like describe in the article (1)!!!!!!, the first solution doesn't work well if their is to much people in the area, and require to have many camera in the area to be accurate. After to have localise the person the application need to find the better route. To do that the article (1) !!!!! propose to use AIs, which will use information based on different surveillance cameras. This AIs will be train in function of the different criteria, this will permit to the people with ASD, to have a route tailored to him.
 
-\subsection{Subsection 1}
+The other solution discussed in the articles (3) !!!!!!!, is about to guide person with ASD in city. This solution take the appearance of an application that the person can have on this phone. This app would be similar to other applications which find path to a destination. But this one could take in consideration different information like the slope, length, accessibility and time. From this information we can derive different route for the different type of user. This permit to person with ASD to have route which are adapted to them.
 
-Cras commodo, elit at fermentum tincidunt, velit urna feugiat leo, in varius est magna in lectus. Curabitur sodales, libero et dapibus placerat, dolor arcu egestas lectus, accumsan mattis orci ante et est. Etiam maximus maximus ante vitae elementum. Praesent volutpat mauris eget sapien pretium, a consequat mi mattis. Phasellus ac lobortis odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Vestibulum tincidunt tristique semper.
+\subsection{Solutions based on the layout of the city}
 
-Nullam faucibus eu risus nec accumsan. In vitae augue rhoncus, iaculis nunc non, dapibus massa. In laoreet quis ante ac porta. Morbi eget lorem scelerisque, accumsan felis sit amet, cursus nisl. Etiam vitae orci tristique, sollicitudin odio in, varius metus. Nullam massa risus, molestie eget dictum mattis, placerat vel risus. Aenean consequat tristique libero ac rutrum. Integer fringilla facilisis felis, non accumsan erat accumsan a. Nunc vitae lorem id ligula dapibus convallis at ut nisl. Mauris consectetur urna quam, nec egestas erat suscipit in.
+This type of layout are permanent, they will be always here. Unlike the solutions before they don't need to be invoke and the person are obligate to use it. This difference impose at the layout's change to be think for all the population, like it is describe in (4) !!!!!!
 
-\subsection{Subsection 2}
+For the city planning presented in this article, it's purpose is to simplify the travel of people with ASD autonomously. Their different problems which append in the street that the layout's change need to cover to do that. Like the noise and the regular dangerous situation. To do that the paper offers different solutions that can be combine. The first step is to define a route to go to a parking to some main place of the city. After to have done that, one of the next step is to decrease the car’s traffic, with creation of low-speed blocks to discourage through traffic, add parking's areas at the entrance of the quarter, and to reduce the size of roads in favor of sidewalks. Another step is to mark the dangerous zone, to facilitate their identification. To do that we can mark by a vertical line (on the floor) the regular path taken. In the safe areas, the line is blue, in the dangerous zone the line is red, this mark when you need to be careful. The last step presented is to use this route to create park's space, and quiet space, with the addition of trees and benches to the city.
 
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec et maximus dui. Proin bibendum dolor turpis, nec eleifend purus pharetra in. Cras mattis, nisl sit amet varius suscipit, dolor eros imperdiet risus, et blandit arcu tellus eget nunc. Vivamus eu nibh vitae lectus tristique ullamcorper quis in odio. Sed non enim sit amet lacus porta tincidunt. Ut eget facilisis eros, et eleifend nisl. In tincidunt mattis tellus in varius. Sed felis eros, sollicitudin eget purus ultrices, tempor malesuada est. Ut egestas erat et velit tempor viverra. Aenean quis imperdiet nisi. Aliquam varius vestibulum nibh sit amet euismod. Duis massa lectus, efficitur vitae porttitor id, sodales nec quam. Suspendisse aliquet mattis metus, ac dignissim nulla ultricies in. Nulla a commodo orci.
+It is also precise in the paper (4) !!!!!!!, that this type of layout will not just be a good thing for people with ASD. But a real improvement in the organisation of the city, which can benefit to every body and improve the quality of life.
 
-Mauris vitae libero odio. Praesent nec eros sem. Ut aliquet vestibulum lorem ac venenatis. Maecenas feugiat, est at suscipit luctus, velit purus laoreet mauris, eu pharetra eros neque a lacus. Duis cursus quis purus ac accumsan. Praesent ullamcorper porta libero, quis ultrices enim porttitor sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas non euismod purus, ac suscipit nibh. Donec in massa aliquet, vestibulum libero eu, fermentum sapien. Mauris consequat imperdiet eros ut elementum. Nulla euismod, enim id malesuada gravida, purus lectus imperdiet nibh, sit amet ullamcorper metus nunc nec nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eu mauris sit amet diam suscipit venenatis. Vestibulum ut leo ac metus fermentum porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+\subsection{Solutions based on wearable assistive technologies}
+This type of technologies unlike the other presented above need to use by the person with ASD. But when they have start to be use, they will attract it attention to proposition some adjustment on this comportment to the person. The purpose of this type of solution is to simplify the social interaction of people with ASD.
 
-\subsection{Subsection 3}
+Like presented in the article (5) !!!!!!!!, the main idea is to fixed the stereotypical behavior of people with ASD. The number  and the types of this technologies are very large, which cover many of the stereotypical behavior. Here is some of the technologies presented in the paper :
 
-Proin gravida eros id faucibus sollicitudin. Vivamus molestie, nisi nec blandit viverra, eros arcu porttitor nibh, a vestibulum est urna ut mi. Donec vel nisl vitae odio ullamcorper tempor eu eu libero. Nullam sem nisi, varius ut nunc vel, luctus cursus dui. Proin cursus euismod sem tincidunt dignissim. Suspendisse volutpat arcu eu scelerisque facilisis. Donec id ultricies sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+Eye contact and Joint Attention : They are another key aspect of social skills training, especially for autistic infants and toddlers. The idea is to used a mobile eye-tracking glasses mounted with a camera to automatically detect patterns of mutual eye-contact. To advert the person with ASD, look elsewhere.
 
-Donec at elit vehicula, varius nisl ac, malesuada ante. Mauris ut iaculis enim. Quisque faucibus nibh id dui hendrerit sagittis. Suspendisse non mauris a purus aliquet iaculis. Aliquam erat volutpat. Vestibulum augue sem, pretium quis dapibus sit amet, pretium sed urna. Donec at lectus dui. Ut imperdiet augue eget odio vehicula ullamcorper. Maecenas sed enim quis nunc porttitor eleifend. Aenean et mollis nibh. Integer id posuere odio. Sed et porttitor metus, a semper mi. Mauris egestas odio in posuere mollis. Praesent pellentesque, dolor nec aliquam dictum, ex lectus cursus sapien, vehicula ornare urna ipsum non massa.
+Proximity and distance : Autistic people have troubles responding appropriately to the physical distance between individuals during social interactions. This technology will calculates the distance between a user and her/his interaction partner, and indicates whether or not it is a comfortable social space. 
 
-\subsection{Subsection 4}
+ Atypical Prosody : The acoustic quality of an autistic person’s voice and prosody can be unusual and result in misinterpretation of a form of nonverbal communication. (flat tone, too loud voice). A system built on Google glasses called SayWAT will constantly monitors the voice volume and pitch of users and provides alerts when atypicality is detected. They  will receive trigger alerts via plain text or animation with different colors in function of the severity of the situation.
+ 
+Stereotypical Behaviors : The idea is to uses wireless Bluetooth accelerometers worn on the right wrist, back of the waist, and left ankle of a person in conjunction that recognize 7 types of stereotypical behaviors. 
 
-Quisque ut risus neque. Praesent iaculis finibus porttitor. Sed rutrum diam eget gravida imperdiet. Sed at ex velit. Ut ut dictum sem. Pellentesque a tincidunt lorem. Sed tincidunt metus nec auctor semper. Phasellus vestibulum auctor justo a pretium. Nam eu tincidunt dui, at scelerisque ante. Phasellus dapibus lacus at tempus pellentesque.
+General Social Skills : Most existing WATs target one aspect of social interaction. The exception is MOSOCO (Mobile Social Compass), which targets a range of social skills and is built on the social compass curriculum. It includes 24 core lessons from basic non-verbal communication to more complex social problem solving. It is a mobile application that augments a real life social situation and provides visual and verbal support.
 
-Vivamus mattis porta mi iaculis sagittis. Aenean sit amet rutrum nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque quis libero imperdiet, consectetur felis sed, venenatis augue. Nulla tempor rutrum viverra. Proin non dictum urna. Mauris mattis finibus neque, quis tincidunt libero vulputate eu. Praesent lobortis fermentum faucibus. Donec eget neque eu enim aliquam mattis. Praesent a eleifend ante. Suspendisse auctor enim sit amet malesuada malesuada. Aenean molestie lacus sed velit ornare malesuada. Nam sagittis pretium interdum. 
